--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <td style="padding: 16px 16px 16px 32px;">
                         <p style="margin: 0; font-size: 15px; padding-bottom: 24px;">
                             Foi surpreendido com uma demissão e bateu aquele desespero? <br><br>
-                            É inevitável se sentir perdido nesse momento, mas sempre há maneiras de driblar a incerteza e buscar uma oportunidade ainda melhor, otimizando seu tempo para se tornar um profissional mais competitivo para o mercado. Confira o carrossel para algumas dicas valiosas!
+                            É inevitável se sentir perdido nesse momento, mas sempre há maneiras de driblar a incerteza e buscar uma oportunidade ainda melhor, otimizando seu tempo para se tornar um profissional mais competitivo para o mercado. Confira o post para algumas dicas valiosas!
                         </p>
                         <button style="position: relative; left: 172px; padding: 8px; font-weight: bold; color: #222; background-color:hotpink; border: 2px solid #222; border-radius: 20px; cursor: pointer;">Leia mais</button>
                     </td>
@@ -56,7 +56,7 @@
                     </td>
                     <td style="padding: 16px 32px 16px 16px;">
                         <p style="margin: 0; font-size: 15px; padding-bottom: 24px;">
-                            Difícil encontrar um(a) copywriter que nunca tenha se deparado com uma dessas frases. <br><br>
+                            Difícil encontrar um(a) copywriter que nunca tenha se deparado com algumas frases. <br><br>
                             Quais são os melhores conselhos que líderes e clientes precisam ouvir para melhorar sua relação profissional com os redatores?
                         </p>
                         <button style="padding: 8px; font-weight: bold; color: #222; background-color:hotpink; border: 2px solid #222; border-radius: 20px; cursor: pointer;">Leia mais</button>
